--- a/index.html
+++ b/index.html
@@ -17,22 +17,53 @@
 <body>
 
 
+
     <!-- EXERCISE1  -->
 
     <div class="d-flex justify-content-center py-5">
         <div class="card w-50">
-            <div class="card-header text-center" style="background-color: orange; color: white;">QUẢN LÝ TUYỂN SINH</div>
+            <div class="card-header text-center" style="background-color: #C61063; color: white;">QUẢN LÝ TUYỂN SINH
+            </div>
             <div class="body">
                 <div class="form-group pt-3">
-                    <input type="number" class="form-control" id="inputUnitPrice" placeholder="Nhập lương một ngày">
+                    <input type="number" class="form-control form__input" id="inputScore0" placeholder="Điểm chuẩn">
                 </div>
                 <div class="form-group">
 
-                    <input type="number" class="form-control" id="inputNumDay" placeholder="Số ngày làm">
+                    <select class="form-control form__input" name="" id="inputArea">
+                        <option value="0">Chọn khu vực</option>
+                        <option value="2">A</option>
+                        <option value="1">B</option>
+                        <option value="0.5">C</option>
+                    </select>
                 </div>
-                <button type="button" class="btn btn-primary" id="btnCalcSalary">Kết quả</button>
+                <div class="form-group">
+
+                    <select class="form-control form__input" name="" id="inputObject">
+                        <option value="0">Chọn đối tượng</option>
+                        <option value="2.5">1</option>
+                        <option value="1.5">2</option>
+                        <option value="1">3</option>
+                    </select>
+                </div>
+                <div class="form-group">
+
+                    <input type="number" class="form-control form__input" id="inputScore1"
+                        placeholder="Điểm môn thứ nhất">
+                </div>
+                <div class="form-group">
+
+                    <input type="number" class="form-control form__input" id="inputScore2"
+                        placeholder="Điểm môn thứ hai">
+                </div>
+                <div class="form-group">
+
+                    <input type="number" class="form-control form__input" id="inputScore3"
+                        placeholder="Điểm môn thứ ba">
+                </div>
 
 
+                <button type="button" class="btn btn-primary" id="btnResult">Kết quả</button>
                 <p class="alert alert-info mt-3 py-3" id="txtNotify1"></p>
 
             </div>
@@ -44,34 +75,22 @@
 
     <!-- EXERCISE2  -->
 
-
-
     <div class="d-flex justify-content-center py-5">
         <div class="card w-50">
-            <div class="card-header text-center" style="background-color: orange; color: white;">TÍNH TIỀN ĐIỆN
+            <div class="card-header text-center" style="background-color: #f50057; color: white;">TÍNH TIỀN ĐIỆN
             </div>
             <div class="body">
                 <div class="form-group pt-3">
-                    <input type="number" class="form-control" id="inputNum1" placeholder="Nhập số thứ 1">
+                    <input type="text" class="form-control" id="inputName" placeholder="Nhập họ tên">
                 </div>
 
                 <div class="form-group">
-                    <input type="number" class="form-control" id="inputNum2" placeholder="Nhập số thứ 2">
+                    <input type="number" class="form-control" id="inputKw" placeholder="Nhập số kw">
                 </div>
 
-                <div class="form-group">
-                    <input type="number" class="form-control" id="inputNum3" placeholder="Nhập số thứ 3">
-                </div>
 
-                <div class="form-group">
-                    <input type="number" class="form-control" id="inputNum4" placeholder="Nhập số thứ 4">
-                </div>
 
-                <div class="form-group">
-                    <input type="number" class="form-control" id="inputNum5" placeholder="Nhập số thứ 5">
-                </div>
-
-                <button type="button" class="btn btn-primary" id="btnCalcAvg">Tính tiền điện</button>
+                <button type="button" class="btn btn-primary" id="btnCalcKW">Tính tiền điện</button>
 
 
                 <p class="alert alert-info mt-3 py-3" id="txtNotify2"></p>
@@ -88,14 +107,21 @@
 
     <div class="d-flex justify-content-center py-5">
         <div class="card w-50">
-            <div class="card-header text-center" style="background-color: orange; color: white;">TÍNH THUẾ THU NHẬP CÁ NHÂN</div>
+            <div class="card-header text-center" style="background-color: #ff4081; color: white;">TÍNH THUẾ THU NHẬP CÁ
+                NHÂN</div>
             <div class="body">
                 <div class="form-group pt-3">
-                    <input type="number" class="form-control" id="inputUsd" placeholder="Nhập số tiền USD">
+                    <input type="text" class="form-control" id="inputName3" placeholder="Nhập họ tên">
+                </div>
+                <div class="form-group">
+                    <input type="number" class="form-control" id="inputSalary" placeholder="Tổng thu nhập năm">
+                </div>
+                <div class="form-group">
+                    <input type="number" class="form-control" id="inputPerson" placeholder="Số người phụ thuộc">
                 </div>
 
 
-                <button type="button" class="btn btn-primary" id="btnCalcExchange">Tính tiền thuế</button>
+                <button type="button" class="btn btn-primary" id="btnCalcTax">Tính tiền thuế</button>
 
                 <p class="alert alert-info mt-3 py-3" id="txtNotify3"></p>
 
@@ -105,30 +131,42 @@
         </div>
     </div>
 
+
+
     <!-- EXERCISE4  -->
 
     <div class="d-flex justify-content-center py-5">
         <div class="card w-50">
-            <div class="card-header text-center" style="background-color: orange; color: white;">TÍNH TIỀN CÁP</div>
+            <div class="card-header text-center" style="background-color: #FF80AB; color: white;">TÍNH TIỀN CÁP</div>
             <div class="body">
                 <div class="form-group pt-3">
-                    <input type="number" class="form-control" id="inputLength" placeholder="Nhập chiều dài">
+                    <select class="form-control form__input" id="selectCustomer" onchange="disableNumConnect()">
+                        <option value="">Chọn loại khách hàng</option>
+                        <option value="people">Nhà Dân</option>
+                        <option value="company">Doanh Nghiệp</option>                                      
+                    </select>
                 </div>
 
                 <div class="form-group pt-3">
-                    <input type="number" class="form-control" id="inputWidth" placeholder="Nhập chiều rộng">
+                    <input type="text" class="form-control form__input" id="customerID" placeholder="Nhập mã khách hàng">
                 </div>
 
-                <button type="button" class="btn btn-primary" id="btnCalcAreaCircuit">Tính tiền cáp</button>
+                <div class="form-group pt-3">
+                    <input type="number" class="form-control form__input" id="premiumChannel" placeholder="Số kênh cao cấp">
+                </div>
+
+                <div class="form-group pt-3">
+                    <input type="number" style="display: none;" class="form-control form__input" id="numConnect" placeholder="Số kết nối">
+                </div>
+
+
+                <button type="button" class="btn btn-primary" id="btnCalcCable">Tính tiền cáp</button>
 
                 <p class="alert alert-info mt-3 py-3" id="txtNotify4"></p>
 
             </div>
         </div>
     </div>
-
-
-
 
 
 
@@ -144,7 +182,7 @@
     <script src="./js/exercise2.js"></script>
     <script src="./js/exercise3.js"></script>
     <script src="./js/exercise4.js"></script>
-   
+
 </body>
 
 </html>
